--- a/dataWareHouse/.classpath
+++ b/dataWareHouse/.classpath
@@ -17,5 +17,23 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/.m2/repository/org/jsoup/jsoup/1.18.1/jsoup-1.18.1.jar" sourcepath="C:/Users/Admin/.m2/repository/org/jsoup/jsoup/1.18.1/jsoup-1.18.1-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.jsoup"/>
+			<attribute name="maven.artifactId" value="jsoup"/>
+			<attribute name="maven.version" value="1.18.1"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/.m2/repository/com/opencsv/opencsv/5.8/opencsv-5.8.jar" sourcepath="C:/Users/Admin/.m2/repository/com/opencsv/opencsv/5.8/opencsv-5.8-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.opencsv"/>
+			<attribute name="maven.artifactId" value="opencsv"/>
+			<attribute name="maven.version" value="5.8"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
