--- a/dataWareHouse/.classpath
+++ b/dataWareHouse/.classpath
@@ -35,5 +35,24 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/.m2/repository/com/sun/mail/javax.mail/1.6.2/javax.mail-1.6.2.jar" sourcepath="C:/Users/Admin/.m2/repository/com/sun/mail/javax.mail/1.6.2/javax.mail-1.6.2-sources.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.sun.mail"/>
+			<attribute name="maven.artifactId" value="javax.mail"/>
+			<attribute name="maven.version" value="1.6.2"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Admin/.m2/repository/javax/mail/javax.mail-api/1.6.2/javax.mail-api-1.6.2.jar" sourcepath="C:/Users/Admin/.m2/repository/javax/mail/javax.mail-api/1.6.2/javax.mail-api-1.6.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="javax.mail"/>
+			<attribute name="maven.artifactId" value="javax.mail-api"/>
+			<attribute name="maven.version" value="1.6.2"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
